--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "destyle.css": "^1.0.11",
+    "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
+    "render-if": "^0.1.1",
     "styled-components": "^5.0.0"
   },
   "scripts": {
@@ -37,6 +39,12 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.1",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "redux-devtools": "^3.5.0"
   }
 }
