--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "private": true,
   "homepage": "https://www.sebastianmaddox.com/",
   "dependencies": {
+    "@apollo/client": "^3.1.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "destyle.css": "^1.0.13",
+    "graphql": "^15.3.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.3.0",
+    "react-redux": "^7.2.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "render-if": "^0.1.1",
     "styled-components": "^5.1.1"
@@ -44,8 +46,8 @@
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react": "^7.20.5",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "redux-devtools": "^3.5.0"
+    "redux-devtools": "^3.6.0"
   }
 }
