--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "destyle.css": "^1.0.13",
+    "gatsby": "^2.32.8",
     "graphql": "^15.3.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
