render projects with contentful and graphql

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Sebastian Maddox",
-  "name": "Sebastian Maddox | Web Developer",
+  "name": "Sebastian Maddox | Developer",
   "icons": [
     {
       "src": "favicon.ico",
