--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "homepage": "https://www.sebastianmaddox.com/",
   "dependencies": {
     "@apollo/client": "^3.1.3",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@contentful/rich-text-types": "^14.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "contentful": "^8.1.7",
     "destyle.css": "^1.0.13",
+    "gatsby-source-contentful": "^4.6.3",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
     "react": "^16.13.1",
