--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@testing-library/user-event": "^7.2.1",
     "contentful": "^8.1.7",
     "destyle.css": "^1.0.13",
+    "gatsby-image": "^2.11.0",
+    "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-source-contentful": "^4.6.3",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
