--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "contentful": "^8.1.7",
     "destyle.css": "^1.0.13",
     "gatsby-image": "^2.11.0",
+    "gatsby-plugin-netlify": "^2.11.0",
     "gatsby-plugin-sharp": "^2.14.3",
     "gatsby-source-contentful": "^4.6.3",
     "prop-types": "^15.7.2",
@@ -50,11 +51,14 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^6.8.0",
+    "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "gatsby": "^2.32.8",
     "redux-devtools": "^3.6.0"
