--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-image": "^2.11.0",
     "gatsby-plugin-netlify": "^2.11.0",
     "gatsby-plugin-sharp": "^2.14.3",
+    "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-source-contentful": "^4.6.3",
     "prop-types": "^15.7.2",
     "ramda": "^0.26.1",
